# qtp

./: README.md  implementation_summary.py  pyproject.toml
.claude/: settings.local.json
config/: default.yaml
config/strategies/: moving_average_crossover.yaml
data/: README.md
docs/: CLAUDE.local.md  CLAUDE.md
src/: __init__.py
src/agents/: __init__.py  messages.py
src/agents/base/: __init__.py  agent.py
src/backtesting/: __init__.py
src/data/: __init__.py  features.py  pipeline.py  structures.py  validation.py
src/data/features/: __init__.py  technical.py
src/data/ingestion/: __init__.py  base.py  feeds.py  sources.py
src/data/sources/: __init__.py  alpha_vantage.py  mock_data.py  websocket_feeds.py  yahoo_finance.py
src/data/validation/: __init__.py  validator.py
src/execution/: __init__.py
src/explanations/: __init__.py
src/risk/: __init__.py  structures.py
src/risk/position_sizing/: __init__.py  kelly.py
src/strategies/: __init__.py  signals.py
src/strategies/base/: __init__.py  signal.py  strategy.py
src/strategies/builtin/: __init__.py  moving_average.py
tests/: __init__.py  conftest.py
tests/unit/agents/: test_messages.py
tests/unit/data/: test_structures.py
tests/unit/risk/: test_structures.py
tests/unit/strategies/: test_signals.py
