[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtp"
version = "0.1.0"
description = "Quantitative Trading Platform with AI-powered agents and transparent explanations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "QTP Development Team", email = "contact@qtp.ai"}
]
maintainers = [
    {name = "QTP Development Team", email = "contact@qtp.ai"}
]
keywords = ["trading", "quantitative", "finance", "ai", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0", 
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "pydantic>=1.10.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "loguru>=0.6.0",
    "joblib>=1.2.0",
    "numba>=0.56.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.18.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.8.0",
    "redis>=4.3.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-asyncio>=0.20.0",
    "pytest-mock>=3.8.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocstrings[python]>=0.19.0",
]
ml = [
    "torch>=1.12.0",
    "tensorflow>=2.10.0", 
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "optuna>=3.0.0",
    "mlflow>=2.0.0",
]
brokers = [
    "alpaca-trade-api>=3.0.0",
    "ib-insync>=0.9.0",
    "ccxt>=2.0.0",
]

[project.urls]
homepage = "https://github.com/qtp/qtp"
documentation = "https://qtp.readthedocs.io"
repository = "https://github.com/qtp/qtp"
changelog = "https://github.com/qtp/qtp/blob/main/CHANGELOG.md"

[project.scripts]
qtp = "qtp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks", 
    "requires_data: marks tests that require external data",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "alpaca_trade_api.*", 
    "ib_insync.*",
    "ccxt.*",
    "ta.*",
    "numba.*",
]
ignore_missing_imports = true